Adjusted top padding of description container to correctly align vertically. #5

--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,7 @@ header {
   position: relative;
   right: 15px;
 }
+
+#main-description {
+  padding-top: 100px;
+}
